[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.3.0"
license = "MIT"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
base64 = "0.22"
futures = "0.3"
dashmap = "6"

# internal crates
dig2browser-cdp = { path = "crates/cdp" }
dig2browser-webdriver = { path = "crates/webdriver" }
dig2browser-bidi = { path = "crates/bidi" }
dig2browser-stealth = { path = "crates/stealth" }
dig2browser-cookie = { path = "crates/cookie" }
dig2browser-detect = { path = "crates/detect" }
dig2browser-core = { path = "crates/core" }

[package]
name = "dig2browser"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
dig2browser-core.workspace = true
