[package]
name = "dig2browser"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "Stealth browser automation — custom CDP, WebDriver, BiDi backends"
repository = "https://github.com/ZENG3LD/dig2browser"
keywords = ["browser", "automation", "cdp", "webdriver", "stealth"]
categories = ["web-programming", "development-tools::testing"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
base64 = "0.22"
futures = "0.3"
dashmap = "6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Win32_System_Memory",
] }
