[package]
name = "dig2browser"
version = "0.4.10"
edition = "2021"
license = "MIT"
description = "Stealth browser automation with Web Bot Auth — CDP, WebDriver, BiDi backends"
repository = "https://github.com/ZENG3LD/dig2browser"
keywords = ["browser", "automation", "cdp", "web-bot-auth", "stealth"]
categories = ["web-programming", "development-tools::testing"]
readme = "README.md"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "dev-fetch"
path = "src/bin/dev_fetch.rs"

[lib]
name = "dig2browser"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
web-bot-auth = "0.6.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
time = "0.3"
indexmap = "2"
url = "2"
aes-gcm = "0.10"
base64 = "0.22"
futures = "0.3"
dashmap = "6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Win32_System_Memory",
] }
