[package]
name = "dig2browser-cookie"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
dig2browser-detect.workspace = true
rusqlite.workspace = true
aes-gcm.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Win32_System_Memory",
] }
